# meta-ruvector

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  deny.toml  package.json
.attractor/: .gitignore  (+1 more)
crates/agentic-robotics-benchmarks/: Cargo.toml  README.md
crates/agentic-robotics-benchmarks/benches/: executor_performance.rs  message_serialization.rs  pubsub_latency.rs
crates/agentic-robotics-benchmarks/src/: lib.rs
crates/codex-env/: Cargo.toml  README.md
crates/codex-env/src/: agent_roles.rs  command_prompts.rs  doctor.rs  generated.rs  lib.rs  main.rs  raw_mirror.rs
crates/codex-env/tests/: mirror.rs
crates/emergent-time/: Cargo.toml  README.md
crates/emergent-time/benches/: clocks.rs
crates/emergent-time/examples/: emergent_time.rs  learn_weights.rs  real_trace_eval.rs  train_model.rs
crates/emergent-time/models/: agentic_weights.witness.txt
crates/emergent-time/src/: adaptive.rs  agentic.rs  agentic_time.rs  complex.rs  complex_matrix.rs  entropic.rs  entropy.rs  lib.rs  page_wootters.rs  real_matrix.rs  state.rs  structural_clock.rs  thermal.rs  weight_learning.rs  wheeler_dewitt.rs  witness.rs
crates/ruos-thermal/: Cargo.toml  README.md
crates/ruos-thermal/src/: lib.rs  main.rs
crates/ruos-thermal/tests/: cli.rs
crates/ruvector-graph-transformer-node/: Cargo.toml  README.md
crates/ruvector-graph-transformer-node/npm/darwin-x64/: ruvector-graph-transformer.darwin-x64.node
crates/ruvector-graph-transformer-node/npm/linux-arm64-gnu/: ruvector-graph-transformer.linux-arm64-gnu.node
crates/ruvector-graph-transformer-node/npm/linux-arm64-musl/: ruvector-graph-transformer.linux-arm64-musl.node
crates/ruvector-graph-transformer-node/npm/linux-x64-gnu/: ruvector-graph-transformer.linux-x64-gnu.node
crates/ruvector-graph-transformer-node/npm/linux-x64-musl/: ruvector-graph-transformer.linux-x64-musl.node
crates/ruvector-hnsw-repair/: Cargo.toml
crates/ruvector-hnsw-repair/src/: benchmark.rs
crates/ruvector-sparse-inference-wasm/: Cargo.toml  README.md
crates/ruvector-sparse-inference-wasm/src/: lib.rs
crates/ruvix/crates/cap/: Cargo.toml
crates/ruvix/crates/cap/src/: optimized.rs  table.rs
crates/ruvix/crates/cap/tests/: capability_test.rs
crates/ruvix/crates/region/: Cargo.toml
crates/ruvix/crates/region/src/: append_only.rs  lib.rs  manager.rs  slab.rs  slab_optimized.rs
examples/exo-ai-2025/: Cargo.toml
examples/exo-ai-2025/crates/exo-backend-classical/: README.md
examples/exo-ai-2025/crates/exo-backend-classical/src/: domain_bridge.rs  graph.rs  lib.rs  thermo_layer.rs  vector.rs
examples/exo-ai-2025/crates/exo-backend-classical/tests/: classical_backend_test.rs  learning_benchmarks.rs  performance_comparison.rs
examples/exo-ai-2025/crates/exo-core/: README.md
examples/exo-ai-2025/crates/exo-core/src/: coherence_router.rs  consciousness.rs  genomic.rs  plasticity_engine.rs  thermodynamics.rs  witness.rs
examples/exo-ai-2025/crates/exo-exotic/benches/: exotic_benchmarks.rs
examples/exo-ai-2025/crates/exo-exotic/src/: black_holes.rs  domain_transfer.rs  dreams.rs  free_energy.rs  lib.rs  morphogenesis.rs  multiple_selves.rs
examples/exo-ai-2025/crates/exo-federation/src/: consensus.rs  crypto.rs  handshake.rs  lib.rs
examples/exo-ai-2025/crates/exo-hypergraph/: Cargo.toml  README.md
examples/exo-ai-2025/crates/exo-hypergraph/src/: hyperedge.rs  sheaf.rs  sparse_tda.rs  topology.rs
examples/exo-ai-2025/crates/exo-hypergraph/tests/: hypergraph_test.rs
examples/exo-ai-2025/crates/exo-manifold/: README.md
examples/exo-ai-2025/crates/exo-manifold/src/: retrieval.rs  transfer_store.rs
examples/exo-ai-2025/crates/exo-manifold/tests/: manifold_engine_test.rs
examples/exo-ai-2025/crates/exo-node/: Cargo.toml  README.md
examples/exo-ai-2025/crates/exo-node/src/: lib.rs  types.rs
examples/exo-ai-2025/crates/exo-temporal/: README.md
examples/exo-ai-2025/crates/exo-temporal/src/: anticipation.rs  causal.rs  consolidation.rs  long_term.rs  transfer_timeline.rs
examples/exo-ai-2025/crates/exo-temporal/tests/: temporal_memory_test.rs
examples/exo-ai-2025/crates/exo-wasm/: Cargo.toml  README.md
examples/exo-ai-2025/crates/exo-wasm/src/: lib.rs
examples/exo-ai-2025/research/01-neuromorphic-spiking/: Cargo.toml
examples/exo-ai-2025/research/01-neuromorphic-spiking/benches/: spike_benchmark.rs
examples/exo-ai-2025/research/01-neuromorphic-spiking/examples/: quick_bench.rs
examples/exo-ai-2025/research/01-neuromorphic-spiking/src/: bit_parallel_spikes.rs  lib.rs  spiking_consciousness.rs
examples/exo-ai-2025/research/02-quantum-superposition/: Cargo.toml
examples/exo-ai-2025/research/02-quantum-superposition/benches/: cognitive_benchmarks.rs
examples/exo-ai-2025/research/02-quantum-superposition/examples/: attention_collapse.rs
examples/exo-ai-2025/research/03-time-crystal-cognition/: Cargo.toml
examples/exo-ai-2025/research/04-sparse-persistent-homology/: Cargo.toml
examples/exo-ai-2025/research/05-memory-mapped-neural-fields/: Cargo.toml
examples/exo-ai-2025/research/06-federated-collective-phi/: Cargo.toml
examples/exo-ai-2025/research/07-causal-emergence/: Cargo.toml
examples/exo-ai-2025/research/08-meta-simulation-consciousness/: Cargo.toml
examples/exo-ai-2025/research/09-hyperbolic-attention/: Cargo.toml
examples/exo-ai-2025/research/10-thermodynamic-learning/: Cargo.toml
examples/exo-ai-2025/research/11-conscious-language-interface/: Cargo.toml
examples/vibecast-7sense/: Cargo.toml
examples/vibecast-7sense/crates/sevensense-analysis/: Cargo.toml  README.md
examples/vibecast-7sense/crates/sevensense-api/: Cargo.toml  README.md
examples/vibecast-7sense/crates/sevensense-audio/: Cargo.toml  README.md
examples/vibecast-7sense/crates/sevensense-core/: README.md
examples/vibecast-7sense/crates/sevensense-embedding/: Cargo.toml  README.md
examples/vibecast-7sense/crates/sevensense-interpretation/: Cargo.toml  README.md
examples/vibecast-7sense/crates/sevensense-learning/: Cargo.toml
examples/vibecast-7sense/crates/sevensense-vector/: Cargo.toml
(+1517 files in other folders)
