[workspace]
exclude = ["examples/ruvLLM/esp32", "examples/ruvLLM/esp32-flash", "examples/data", "examples/ruvLLM", "examples/delta-behavior",     "crates/micro-hnsw-wasm",  # wasm cdylib shell - needs nightly -Zbuild-std
    "crates/rvf", "crates/rvf/*", "crates/rvf/*/*",
    # ruvector-postgres is a pgrx-based PostgreSQL extension. Its build script
    # requires `$PGRX_HOME` set up via `cargo install cargo-pgrx --version 0.12.9`
    # and `cargo pgrx init`, which downloads and builds multiple Postgres
    # versions. Keep it out of default workspace builds so `cargo build --workspace`
    # works in stock environments. Build it explicitly with `cargo build -p ruvector-postgres`
    # after running pgrx init.
    "crates/ruvector-postgres",
    # Iter 219 (closes ADR-178 Gap E folded into Gap B): the hailo
    # crates rejoined the workspace once the iter-218 ruvector-core
    # path dep + EmbeddingProvider impls landed. The `hailo` feature
    # stays opt-in (only `cargo build --features hailo,cpu-fallback`
    # pulls libhailort + candle), so workspace builds on stock x86
    # still compile without Pi-specific tooling.
    # Vendored [patch.crates-io] override source for hnsw_rs — a patch source is
    # not a workspace member by design (two copies exist for different patch
    # tables); excluded explicitly so it is accounted for, not silently orphaned.
    "patches/hnsw_rs",
    "scripts/patches/hnsw_rs",
    # Standalone docker integration-test harness (ruvector-attention-integration-test);
    # run inside its container, not part of the host `cargo build --workspace`.
    "tests/docker-integration",

    # ruvector-attention-cli / ruvector-sparse-inference-wasm: stale against
    # current ruvector-attention / sparse-model APIs (calls removed methods like
    # ScaledDotProductAttention::compute, SparseModel::{encode,forward_embedding,
    # sparsity_statistics}). They do not compile, so they are excluded rather
    # than added as broken members; re-align to the current APIs, then re-add.
    "crates/ruvector-attention-cli",
    "crates/ruvector-sparse-inference-wasm",
    # Ghost scaffolds DELETED (PR #79) — zero source, only misleading README claiming
    # "30 modules, 24K lines" but had no .rs files. Source was recovered via tarball
    # fetch from GitHub (ruvnet/ruqu) into external/ruqu/. See commit 5f4b65d9f.
    # RVM bare-metal kernel sub-workspace: 14+ crates under crates/rvm/
    # with their own [workspace] + [workspace.package] + [workspace.dependencies].
    # Cannot be added to parent workspace — Cargo rejects nested workspace roots.
]

# =============================================================================
# MEMBERS — all crate paths that are part of this workspace build.
# =============================================================================

members = [
    "crates/ruvector-temporal-coherence",
    "crates/ruvector-acorn",
    "crates/ruvector-acorn-wasm",
    "crates/ruvector-coherence-hnsw",
    "crates/ruvector-rabitq",
    "crates/ruvector-rabitq-wasm",
    "crates/ruvector-rulake",
    "crates/ruvector-core",
    "crates/ruvector-node",
    "crates/ruvector-wasm",
    "crates/ruvector-cli",
    "crates/ruvector-bench",
    "crates/ruvector-metrics",
    "crates/ruvector-filter",
    "crates/ruvector-router-core",
    "crates/ruvector-router-cli",
    "crates/ruvector-router-ffi",
    "crates/ruvector-router-wasm",
    "crates/ruvector-server",
    "crates/ruvector-snapshot",
    "crates/ruvector-tiny-dancer-core",
    "crates/ruvector-tiny-dancer-wasm",
    "crates/ruvector-tiny-dancer-node",
    "crates/ruvector-collections",
    "crates/ruvector-cluster",
    "crates/ruvector-raft",
    "crates/ruvector-replication",
    "crates/ruvector-graph",
    "crates/ruvector-graph-node",
    "crates/ruvector-graph-wasm",
    "crates/ruvector-gnn",
    "crates/ruvector-proof-gate",
    "crates/ruvector-gnn-rerank",
    "crates/ruvector-gnn-node",
    "crates/ruvector-gnn-wasm",
    "crates/ruvector-attention",
    "crates/ruvector-attention-wasm",
    "crates/ruvector-attention-node",
    "crates/ruvector-cnn",
    "crates/ruvector-cnn-wasm",
    "crates/ruvector-mincut",
    "crates/ruvector-mincut-wasm",
    "crates/ruvector-mincut-node",
    "crates/ruvector-mincut-gated-transformer",
    "crates/ruvector-mincut-gated-transformer-wasm",
    # NOTE: ruvector-postgres is in workspace `exclude` (pgrx env requirement).
    "crates/ruvector-nervous-system",
    # Iter 219 — hailo backend rejoined the workspace (closes
    # ADR-178 Gap E folded into Gap B). All three build clean on
    # x86 with default features; opting into the actual NPU path
    # requires `--features hailo` on a Pi 5 + AI HAT+.
    "crates/hailort-sys",
    "crates/ruvector-hailo",
    "crates/ruvector-mmwave",
    "crates/ruvector-hailo-cluster",
    "examples/refrag-pipeline",
    "examples/scipix",
    "examples/google-cloud",
    "examples/subpolynomial-time",
    "crates/sona",
    "crates/rvlite",
    "crates/ruvector-dag",
    "crates/ruvector-dag-wasm",
    "crates/ruvector-nervous-system-wasm",
    "crates/ruvector-economy-wasm",
    "crates/ruvector-learning-wasm",
    "crates/ruvector-exotic-wasm",
    "crates/ruvector-attention-unified-wasm",
    "crates/ruvector-fpga-transformer",
    "crates/ruvector-fpga-transformer-wasm",
    "crates/ruvector-sparse-inference",
    "crates/ruvector-math",
    "crates/ruvector-math-wasm",
    "examples/benchmarks",
    "crates/cognitum-gate-kernel",
    "crates/cognitum-gate-tilezero",
    "crates/mcp-gate",
    "crates/mcp-brain",
    "crates/mcp-brain-server",
    "crates/ruvllm",
    "crates/ruvllm-cli",
    "crates/ruvllm-wasm",
    "crates/prime-radiant",
    "crates/ruvector-delta-core",
    "crates/ruvector-delta-wasm",
    "crates/ruvector-delta-index",
    "crates/ruvector-delta-graph",
    "crates/ruvector-delta-consensus",
    "crates/ruvector-crv",
    "crates/ruvector-temporal-tensor",
    "crates/ruvector-domain-expansion",
    "crates/ruvector-domain-expansion-wasm",
    "crates/ruvector-solver",
    "crates/ruvector-solver-wasm",
    "crates/ruvector-solver-node",
    "crates/ruvector-coherence",
    "crates/ruvector-profiler",
    "crates/ruvector-attn-mincut",
    "crates/ruvector-cognitive-container",
    "crates/ruvector-verified",
    "crates/ruvector-verified-wasm",
    "crates/ruvector-graph-transformer",
    "crates/ruvector-graph-transformer-wasm",
    "crates/ruvector-graph-transformer-node",
    "examples/rvf-kernel-optimized",
    "examples/verified-applications",
    "crates/thermorust",
    "crates/ruvector-dither",
    "crates/ruvector-robotics",
    "examples/robotics",
    "crates/neural-trader-core",
    "crates/neural-trader-coherence",
    "crates/neural-trader-replay",
    "crates/neural-trader-wasm",
    # Kalshi integration (ADR-153)
    "crates/ruvector-kalshi",
    "crates/neural-trader-strategies",
    # RuVix Cognition Kernel (organized under crates/ruvix/)
    "crates/ruvix/crates/types",
    "crates/ruvix/crates/region",
    "crates/ruvix/crates/queue",
    "crates/ruvix/crates/cap",
    "crates/ruvix/crates/proof",
    "crates/ruvix/crates/sched",
    "crates/ruvix/crates/boot",
    "crates/ruvix/crates/vecgraph",
    "crates/ruvix/crates/nucleus",
    # Phase B: Bare metal AArch64 support
    "crates/ruvix/crates/hal",
    "crates/ruvix/crates/aarch64",
    "crates/ruvix/crates/drivers",
    "crates/ruvix/tests",
    "crates/ruvix/benches",
    "crates/ruvix/examples/cognitive_demo",
    # rvAgent — AI Agent Framework (DeepAgents Rust conversion)
    "crates/codex-env",
    "crates/rvAgent/rvagent-core",
    "crates/rvAgent/rvagent-backends",
    "crates/rvAgent/rvagent-middleware",
    "crates/rvAgent/rvagent-tools",
    "crates/rvAgent/rvagent-subagents",
    "crates/rvAgent/rvagent-cli",
    "crates/rvAgent/rvagent-acp",
    "crates/rvAgent/rvagent-mcp",
    "crates/rvAgent/rvagent-wasm",
    "crates/rvAgent/rvagent-a2a",
    # ADR-159 a2a-swarm demo
    "examples/a2a-swarm",
    # ETL pipeline example
    "examples/train-discoveries",
    # Spectral graph sparsification
    "crates/ruvector-sparsifier",
    "crates/ruvector-sparsifier-wasm",
    # Consciousness metrics (IIT Φ, causal emergence)
    "crates/ruvector-consciousness",
    "crates/ruvector-consciousness-wasm",
    "examples/cmb-consciousness",
    "examples/gw-consciousness",
    "examples/ecosystem-consciousness",
    "examples/quantum-consciousness",
    "examples/gene-consciousness",
    "examples/climate-consciousness",
    # JS bundle decompiler (ADR-135)
    "crates/ruvector-decompiler",
    "crates/ruvector-decompiler-wasm",
    # DiskANN / Vamana (ADR-143)
    "crates/ruvector-diskann",
    "crates/ruvector-diskann-node",
    # Boundary-first scientific discovery PoC
    "examples/boundary-discovery",
    # CMB Cold Spot boundary-first discovery
    "examples/cmb-boundary-discovery",
    # FRB population boundary discovery (CHIME-like data)
    "examples/frb-boundary-discovery",
    # Cosmic void boundary information content
    "examples/void-boundary-discovery",
    # Multi-regime temporal attractor boundary detection
    "examples/temporal-attractor-discovery",
    # Music genre boundary discovery via spectral graph bisection
    "examples/music-boundary-discovery",
    # Weather regime boundary detection (variance/correlation precedes temperature)
    "examples/weather-boundary-discovery",
    # Market regime boundary discovery via correlation structure
    "examples/market-boundary-discovery",
    # Health state boundary detection from wearable sensor data
    "examples/health-boundary-discovery",
    # SETI exotic signals gallery: boundary-first detection of sub-threshold signals
    "examples/seti-exotic-signals",
    # SETI boundary-first discovery: sub-noise signal detection via coherence graphs
    "examples/seti-boundary-discovery",
    # Earthquake precursor detection via inter-station correlation boundary shifts
    "examples/earthquake-boundary-discovery",
    # Pandemic outbreak detection 60 days before case counts via correlation boundaries
    "examples/pandemic-boundary-discovery",
    # Infrastructure failure prediction via sensor correlation boundaries
    "examples/infrastructure-boundary-discovery",
    # Pre-seizure detection via brain correlation boundary shifts
    "examples/brain-boundary-discovery",
    # Clinical-publication-grade pre-seizure detection report with CSV output
    "examples/seizure-clinical-report",
    # Closed-loop seizure detection + therapeutic response simulation
    "examples/seizure-therapeutic-sim",
    # Real EEG analysis: CHB-MIT PhysioNet data with boundary-first detection
    "examples/real-eeg-analysis",
    # Multi-seizure cross-patient analysis: all 7 chb01 seizures
    "examples/real-eeg-multi-seizure",
    # ruvllm sparse attention kernel for Hailo-10H cluster (ADR-183 – ADR-190)
    "crates/ruvllm_sparse_attention",
    # Generic retrieval LM + masked discrete diffusion built on the kernel
    "crates/ruvllm_retrieval_diffusion",
    # RAIRS IVF: Redundant Assignment + Amplified Inverse Residual (ADR-193)
    "crates/ruvector-rairs",
    # Hybrid sparse-dense search: BM25 + ANN + RRF / RSF / ScoreFusion (ADR-256)
    "crates/ruvector-hybrid",
    # Structure-preserving graph condensation via dynamic min-cut communities
    "crates/ruvector-graph-condense",
    "crates/ruvector-graph-condense-wasm",
    # Perception substrate: delta -> boundary -> coherence -> proof -> action
    "crates/ruvector-perception",
    # Calculus of emergent / relational time (Wheeler-DeWitt, Page-Wootters,
    # entropic, thermal) + Structural Proper Time for agentic systems.
    "crates/emergent-time",
    # PhotonLayer: learned optical-frontend computing simulator (ADR-260)
    "crates/photonlayer-core",
    "crates/photonlayer-bench",
    "crates/photonlayer-ruvector",
    "crates/photonlayer-cli",
    "crates/photonlayer-wasm",
    # Recovered orphans — compile AND pass the clippy gate.
    "crates/ruvector-temporal-tensor-wasm",
    "crates/ruvector-bet4-ivf-bench",
    # Task #16: agent-memory / hnsw-repair / maxsim — promoted from exclude
    # (compiled cleanly, clippy gate was the only blocker). Now wired in.
    "crates/ruvector-agent-memory",
    "crates/ruvector-hnsw-repair",
    "crates/ruvector-maxsim",
    # RVM bare-metal kernel: self-contained nested workspace (14 subcrates, own Cargo.toml).
    # Cannot be added as a member — Cargo rejects nested workspace roots.
    # Each subcrate uses `workspace = true` for deps pointing to its own [workspace.package].
    # Task #12: Ruvix non-member subcrates (bcm2711/rpi-boot/smp/dma/dtb/fs/net/shell/drivers/physmem) —
    # present on disk but never wired into workspace members. Added here.
    "crates/ruvix/crates/bcm2711",
    "crates/ruvix/crates/cli",
    "crates/ruvix/crates/dma",
    "crates/ruvix/crates/dtb",
    "crates/ruvix/crates/fs",
    "crates/ruvix/crates/net",
    "crates/ruvix/crates/shell",
    "crates/ruvix/crates/smp",
    # Note: drivers already in members at line 188 — no duplicate needed.
    "crates/ruvix/crates/physmem",
    # Task #13: exo-ai-2025 subcrates — 9 standalone crates (literal version, no path deps).
    # Each compiles clean in this workspace via parent's [workspace.dependencies].
    "examples/exo-ai-2025/crates/exo-core",
    "examples/exo-ai-2025/crates/exo-backend-classical",
    "examples/exo-ai-2025/crates/exo-exotic",
    "examples/exo-ai-2025/crates/exo-federation",
    "examples/exo-ai-2025/crates/exo-hypergraph",
    "examples/exo-ai-2025/crates/exo-manifold",
    "examples/exo-ai-2025/crates/exo-node",
    "examples/exo-ai-2025/crates/exo-temporal",
    "examples/exo-ai-2025/crates/exo-wasm",
    # ruos-thermal: Pi 5 thermal supervisor (ADR-174). Zero deps, ready to build.
    # Joined the workspace now that the skeleton is complete — daemon mode
    # (Unix socket protocol) in iter 92 of ADR-174 as a follow-up.
    "crates/ruos-thermal",
    # Recovered from GitHub (ruvnet/ruqu) — quantum execution intelligence engine, 93 Rust files, ~63K lines.
    # Source was deleted via commit 82c21c2a7 and never populated into submodules; reconstituted via tarball fetch.
    "external/ruqu/crates/ruQu",
    "external/ruqu/crates/ruqu-algorithms",
    "external/ruqu/crates/ruqu-core",
    "external/ruqu/crates/ruqu-exotic",
    "external/ruqu/crates/ruqu-wasm",
    # Consumers of external/ruqu — re-included in workspace (was excluded due to broken path deps)
    # Now that external/ruqu source is recovered, their path deps resolve correctly.
    "examples/OSpipe",
    # Recovered — had its own [workspace] section (nested workspace root). Stripped it to allow parent membership.
    "examples/rvf",
    # Standalone native desktop app with embedded Three.js dashboard (wry/tao) — zero workspace deps, compiles clean.
    "examples/rvf-desktop",
    # Hyperbolic HNSW substrate — nalgebra 0.34.1 + extra WASM deps wired in [workspace.dependencies].
    "crates/ruvector-hyperbolic-hnsw",
    "crates/ruvector-hyperbolic-hnsw-wasm",
    # Edge-net: edge networking with crypto (ed25519, x25519, aes-gcm, sha2, argon2) + WASM. All deps wired above.
    "examples/edge-net",
    # Robotics middleware cluster (DDS/ROS2 via zenoh/rustdds/cdr) — 6 self-contained crates with workspace.package fields inherited from parent. Internal cross-deps all use workspace = true.
    "crates/agentic-robotics-core",
    "crates/agentic-robotics-rt",
    "crates/agentic-robotics-node",
    "crates/agentic-robotics-mcp",
    "crates/agentic-robotics-embedded",
    "crates/agentic-robotics-benchmarks",
        "examples/vibecast-7sense/crates/sevensense-core",
    "examples/vibecast-7sense/crates/sevensense-audio",
    "examples/vibecast-7sense/crates/sevensense-embedding",
    "examples/vibecast-7sense/crates/sevensense-vector",
    "examples/vibecast-7sense/crates/sevensense-learning",
    "examples/vibecast-7sense/crates/sevensense-analysis",
    "examples/vibecast-7sense/crates/sevensense-interpretation",
    "examples/vibecast-7sense/crates/sevensense-api",
    "examples/vibecast-7sense/crates/sevensense-benches",
    # Vibecast migration — internal path deps for sevensense-* crates defined below.
    # All external deps wired; internal cross-deps use `sevensense-*-workspace = true`.
    "examples/vibecast-7sense/tests",  # vibecast-tests: integration test suite (direct-version specs)
    "examples/vibecast-7sense/scripts",  # performance-report: CLI tools (direct-version specs)
    "vendor/cognitum-one",


]
resolver = "2"

[workspace.lints.clippy]
unused_unit = "allow"

[workspace.package]
version = "2.2.3"
edition = "2021"
rust-version = "1.77"
license = "MIT"
authors = ["Ruvector Team"]
repository = "https://github.com/FlexNetOS/ruvector"
homepage = "https://github.com/FlexNetOS/ruvector"
documentation = "https://github.com/FlexNetOS/ruvector#readme"
description = "RuVector — cognitive architecture substrate"
keywords = ["ai", "cognitive", "architecture"]
categories = ["science::robotics", "science"]

[workspace.dependencies]
# Cognitum Seed / Cloud SDK (https://cognitum.one/developers).
# Vendored in-tree at `vendor/cognitum-one/` (v0.2.1, MIT, upstream
# `cognitum-one/sdks` @ `a9e1c073`). See `vendor/cognitum-one/VENDORED.md`
# for provenance and update procedure. Crates opt in by listing
# `cognitum-one.workspace = true` in their own `Cargo.toml`. Default features
# enable rustls + the `seed` (LAN appliance) surface; add `mdns` / `stream` /
# `blocking` features per crate as needed.
cognitum-one = { path = "vendor/cognitum-one", default-features = false, features = ["rustls", "seed"] }

# Core functionality
redb = "2.1"
memmap2 = "0.9"
hnsw_rs = "0.3"
simsimd = "5.9"
rayon = "1.10"
crossbeam = "0.8"

# DDS/ROS2 middleware (agentic-robotics cluster)
zenoh = "1"
rustdds = "0.8"
cdr = "0.2"
hdrhistogram = "7.5"

# agentic-robotics-mcp SSE transport (optional deps)
axum = { version = "0.8", features = ["http2"] }
tokio-stream = "0.1"
napi-build = "2.3"
tokio-test = "0.4"

# Robotics internal path deps (required for workspace = true references)
agentic-robotics-core = { path = "crates/agentic-robotics-core", version = "2.2.3" }
agentic-robotics-rt = { path = "crates/agentic-robotics-rt", version = "2.2.3" }
agentic-robotics-node = { path = "crates/agentic-robotics-node", version = "0.1.2" }
agentic-robotics-mcp = { path = "crates/agentic-robotics-mcp", version = "0.1.2" }
agentic-robotics-embedded = { path = "crates/agentic-robotics-embedded", version = "0.1.1" }

# Serialization
rkyv = "0.8"
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
bincode1 = { package = "bincode", version = "1.3" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Node.js bindings
napi = { version = "2.16", default-features = false, features = ["napi9", "async", "tokio_rt"] }
napi-derive = "2.16"

# WASM
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Worker", "MessagePort", "console"] }
getrandom = { version = "0.3", features = ["wasm_js"] }

# Async runtime
tokio = { version = "1.41", features = ["full"] }
futures = "0.3"

# Error handling and utilities
thiserror = { version = "2.0", default-features = false }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Math and numerics
nalgebra = { version = "0.34.1", default-features = false, features = ["std"] }
ndarray = "0.16"
approx = "0.5"
rand = "0.8"
rand_distr = "0.4"

# Time and UUID
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde", "js"] }

# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }
indicatif = "0.17"
console = "0.15"

# Testing and benchmarking
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.5"
mockall = "0.13"

# Formal verification
lean-agentic = "=0.1.0"

# Performance
dashmap = "6.1"
parking_lot = "0.12"
once_cell = "1.20"

# Vibecast/sevensense internal deps (path for local dev)
sevensense-core = { path = "examples/vibecast-7sense/crates/sevensense-core" }
sevensense-audio = { path = "examples/vibecast-7sense/crates/sevensense-audio" }
sevensense-embedding = { path = "examples/vibecast-7sense/crates/sevensense-embedding" }
sevensense-vector = { path = "examples/vibecast-7sense/crates/sevensense-vector" }
sevensense-learning = { path = "examples/vibecast-7sense/crates/sevensense-learning" }
sevensense-analysis = { path = "examples/vibecast-7sense/crates/sevensense-analysis" }
sevensense-interpretation = { path = "examples/vibecast-7sense/crates/sevensense-interpretation" }
sevensense-api = { path = "examples/vibecast-7sense/crates/sevensense-api" }
# Vibecast/sevensense external deps (all required by sevensense-* crates)
async-trait = "0.1"
config = "0.14"
dotenvy = "0.15"
hound = "3.5"
symphonia = { version = "0.5", features = ["all"] }
rubato = "0.15"
ort = "2.0.0-rc.11"
qdrant-client = "1.10"
tower-http = { version = "0.5", features = ["trace", "cors", "compression-gzip"] }
async-graphql = { version = "7.0", features = ["uuid", "chrono", "tracing"] }
async-graphql-axum = "7.0"
utoipa = { version = "5.6", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }
governor = "0.6"
tracing-opentelemetry = "0.24"
opentelemetry = "0.23"
opentelemetry_sdk = "0.23"
half = "2.4"
test-case = "3.3"
# Missing external deps needed by sevensense-* crates
petgraph = "0.6"
ndarray-rand = "0.14"
instant-distance = "0.6"
hashbrown = { version = "0.14", features = ["serde"] }
smallvec = { version = "1.13", features = ["serde"] }
ordered-float = "4.2"
realfft = "3.3"
async-stream = "0.3"
bytes = "1.5"
mime = "0.3"
num_cpus = "1.16"
pretty_assertions = "1.4"
tower = "0.4"
tempfile = "3.10"
sevensense-benches = { path = "examples/vibecast-7sense/crates/sevensense-benches" }

# Edge-net / crypto deps
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
x25519-dalek = { version = "2.0" }
aes-gcm = { version = "0.10", features = ["aes"] }
sha2 = "0.10"
argon2 = "0.5"
zeroize = { version = "1.7", features = ["derive"] }
hex = "0.4"
base64 = "0.22"
rustc-hash = "2.0"
typed-arena = "2.0"
string_cache = "0.8"

# Hyperbolic HNSW WASM extras
wasm-bindgen-test = "0.3"
console_error_panic_hook = "0.1"
wasm-bindgen-rayon = "1.2"
serde-wasm-bindgen = "0.6"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "unwind"

[profile.bench]
inherits = "release"
debug = true

[profile.dev]
opt-level = 0
debug = true

[profile.test]

# Patch hnsw_rs to use rand 0.8 instead of 0.9 for WASM compatibility
# This resolves the getrandom version conflict (0.2 vs 0.3)
[patch.crates-io]
hnsw_rs = { path = "./patches/hnsw_rs" }
