[workspace]
exclude = [
    # Excludes: only paths neither branch built as a member (nested/patch/env-gated).
    "crates/micro-hnsw-wasm",
    "crates/ruvector-attention-cli",
    "crates/ruvector-hyperbolic-hnsw",
    "crates/ruvector-hyperbolic-hnsw-wasm",
    "crates/ruvector-postgres",
    "crates/ruvector-sparse-inference-wasm",
    "crates/rvf",
    "crates/rvf/*",
    "crates/rvf/*/*",
    "examples/data",
    "examples/delta-behavior",
    "examples/edge-net",
    "examples/ruvLLM",
    "examples/ruvLLM/esp32",
    "examples/ruvLLM/esp32-flash",
    "examples/vibecast-7sense/crates/sevensense-analysis",
    "examples/vibecast-7sense/crates/sevensense-api",
    "examples/vibecast-7sense/crates/sevensense-audio",
    "examples/vibecast-7sense/crates/sevensense-core",
    "examples/vibecast-7sense/crates/sevensense-embedding",
    "examples/vibecast-7sense/crates/sevensense-interpretation",
    "examples/vibecast-7sense/crates/sevensense-learning",
    "examples/vibecast-7sense/crates/sevensense-vector",
    "external/ruqu",
    "external/rvdna",
    "patches/hnsw_rs",
    "scripts/patches/hnsw_rs",
    "tests/docker-integration",
]

# =============================================================================
# MEMBERS — all crate paths that are part of this workspace build.
# =============================================================================

members = [
    # FULL UNION of main + develop members (no exclusions — all crates wired).
    "crates/agentic-robotics-benchmarks",
    "crates/agentic-robotics-core",
    "crates/agentic-robotics-embedded",
    "crates/agentic-robotics-mcp",
    "crates/agentic-robotics-node",
    "crates/agentic-robotics-rt",
    "crates/codex-env",
    "crates/cognitum-gate-kernel",
    "crates/cognitum-gate-tilezero",
    "crates/emergent-time",
    "crates/hailort-sys",
    "crates/mcp-brain",
    "crates/mcp-brain-server",
    "crates/mcp-gate",
    "crates/neural-trader-coherence",
    "crates/neural-trader-core",
    "crates/neural-trader-replay",
    "crates/neural-trader-strategies",
    "crates/neural-trader-wasm",
    "crates/photonlayer-bench",
    "crates/photonlayer-cli",
    "crates/photonlayer-core",
    "crates/photonlayer-ruvector",
    "crates/photonlayer-wasm",
    "crates/prime-radiant",
    "crates/ruos-thermal",
    "crates/ruvector-acorn",
    "crates/ruvector-acorn-wasm",
    "crates/ruvector-agent-memory",
    "crates/ruvector-attention",
    "crates/ruvector-attention-node",
    "crates/ruvector-attention-unified-wasm",
    "crates/ruvector-attention-wasm",
    "crates/ruvector-attn-mincut",
    "crates/ruvector-bench",
    "crates/ruvector-bet4-ivf-bench",
    "crates/ruvector-cli",
    "crates/ruvector-cluster",
    "crates/ruvector-cnn",
    "crates/ruvector-cnn-wasm",
    "crates/ruvector-cognitive-container",
    "crates/ruvector-coherence",
    "crates/ruvector-coherence-hnsw",
    "crates/ruvector-collections",
    "crates/ruvector-consciousness",
    "crates/ruvector-consciousness-wasm",
    "crates/ruvector-core",
    "crates/ruvector-crv",
    "crates/ruvector-dag",
    "crates/ruvector-dag-wasm",
    "crates/ruvector-decompiler",
    "crates/ruvector-decompiler-wasm",
    "crates/ruvector-delta-consensus",
    "crates/ruvector-delta-core",
    "crates/ruvector-delta-graph",
    "crates/ruvector-delta-index",
    "crates/ruvector-delta-wasm",
    "crates/ruvector-diskann",
    "crates/ruvector-diskann-node",
    "crates/ruvector-dither",
    "crates/ruvector-domain-expansion",
    "crates/ruvector-domain-expansion-wasm",
    "crates/ruvector-economy-wasm",
    "crates/ruvector-exotic-wasm",
    "crates/ruvector-filter",
    "crates/ruvector-fpga-transformer",
    "crates/ruvector-fpga-transformer-wasm",
    "crates/ruvector-gnn",
    "crates/ruvector-gnn-node",
    "crates/ruvector-gnn-rerank",
    "crates/ruvector-gnn-wasm",
    "crates/ruvector-graph",
    "crates/ruvector-graph-condense",
    "crates/ruvector-graph-condense-wasm",
    "crates/ruvector-graph-node",
    "crates/ruvector-graph-transformer",
    "crates/ruvector-graph-transformer-node",
    "crates/ruvector-graph-transformer-wasm",
    "crates/ruvector-graph-wasm",
    "crates/ruvector-hailo",
    "crates/ruvector-hailo-cluster",
    "crates/ruvector-hnsw-repair",
    "crates/ruvector-hybrid",
    "crates/ruvector-kalshi",
    "crates/ruvector-learning-wasm",
    "crates/ruvector-math",
    "crates/ruvector-math-wasm",
    "crates/ruvector-maxsim",
    "crates/ruvector-metrics",
    "crates/ruvector-mincut",
    "crates/ruvector-mincut-gated-transformer",
    "crates/ruvector-mincut-gated-transformer-wasm",
    "crates/ruvector-mincut-node",
    "crates/ruvector-mincut-wasm",
    "crates/ruvector-mmwave",
    "crates/ruvector-nervous-system",
    "crates/ruvector-nervous-system-wasm",
    "crates/ruvector-node",
    "crates/ruvector-perception",
    "crates/ruvector-profiler",
    "crates/ruvector-proof-gate",
    "crates/ruvector-rabitq",
    "crates/ruvector-rabitq-wasm",
    "crates/ruvector-raft",
    "crates/ruvector-rairs",
    "crates/ruvector-replication",
    "crates/ruvector-robotics",
    "crates/ruvector-router-cli",
    "crates/ruvector-router-core",
    "crates/ruvector-router-ffi",
    "crates/ruvector-router-wasm",
    "crates/ruvector-rulake",
    "crates/ruvector-server",
    "crates/ruvector-snapshot",
    "crates/ruvector-solver",
    "crates/ruvector-solver-node",
    "crates/ruvector-solver-wasm",
    "crates/ruvector-sparse-inference",
    "crates/ruvector-sparsifier",
    "crates/ruvector-sparsifier-wasm",
    "crates/ruvector-temporal-coherence",
    "crates/ruvector-temporal-tensor",
    "crates/ruvector-temporal-tensor-wasm",
    "crates/ruvector-tiny-dancer-core",
    "crates/ruvector-tiny-dancer-node",
    "crates/ruvector-tiny-dancer-wasm",
    "crates/ruvector-verified",
    "crates/ruvector-verified-wasm",
    "crates/ruvector-wasm",
    "crates/ruvix/benches",
    "crates/ruvix/crates/aarch64",
    "crates/ruvix/crates/bcm2711",
    "crates/ruvix/crates/boot",
    "crates/ruvix/crates/cap",
    "crates/ruvix/crates/cli",
    "crates/ruvix/crates/dma",
    "crates/ruvix/crates/drivers",
    "crates/ruvix/crates/dtb",
    "crates/ruvix/crates/fs",
    "crates/ruvix/crates/hal",
    "crates/ruvix/crates/net",
    "crates/ruvix/crates/nucleus",
    "crates/ruvix/crates/physmem",
    "crates/ruvix/crates/proof",
    "crates/ruvix/crates/queue",
    "crates/ruvix/crates/region",
    "crates/ruvix/crates/sched",
    "crates/ruvix/crates/shell",
    "crates/ruvix/crates/smp",
    "crates/ruvix/crates/types",
    "crates/ruvix/crates/vecgraph",
    "crates/ruvix/examples/cognitive_demo",
    "crates/ruvix/tests",
    "crates/ruvllm",
    "crates/ruvllm-cli",
    "crates/ruvllm-wasm",
    "crates/ruvllm_retrieval_diffusion",
    "crates/ruvllm_sparse_attention",
    "crates/rvAgent/rvagent-a2a",
    "crates/rvAgent/rvagent-acp",
    "crates/rvAgent/rvagent-backends",
    "crates/rvAgent/rvagent-cli",
    "crates/rvAgent/rvagent-core",
    "crates/rvAgent/rvagent-mcp",
    "crates/rvAgent/rvagent-middleware",
    "crates/rvAgent/rvagent-subagents",
    "crates/rvAgent/rvagent-tools",
    "crates/rvAgent/rvagent-wasm",
    "crates/rvlite",
    "crates/sona",
    "crates/thermorust",
    "examples/OSpipe",
    "examples/a2a-swarm",
    "examples/benchmarks",
    "examples/boundary-discovery",
    "examples/brain-boundary-discovery",
    "examples/climate-consciousness",
    "examples/cmb-boundary-discovery",
    "examples/cmb-consciousness",
    "examples/earthquake-boundary-discovery",
    "examples/ecosystem-consciousness",
    "examples/exo-ai-2025/crates/exo-backend-classical",
    "examples/exo-ai-2025/crates/exo-core",
    "examples/exo-ai-2025/crates/exo-exotic",
    "examples/exo-ai-2025/crates/exo-federation",
    "examples/exo-ai-2025/crates/exo-hypergraph",
    "examples/exo-ai-2025/crates/exo-manifold",
    "examples/exo-ai-2025/crates/exo-node",
    "examples/exo-ai-2025/crates/exo-temporal",
    "examples/exo-ai-2025/crates/exo-wasm",
    "examples/frb-boundary-discovery",
    "examples/gene-consciousness",
    "examples/google-cloud",
    "examples/gw-consciousness",
    "examples/health-boundary-discovery",
    "examples/infrastructure-boundary-discovery",
    "examples/market-boundary-discovery",
    "examples/music-boundary-discovery",
    "examples/pandemic-boundary-discovery",
    "examples/quantum-consciousness",
    "examples/real-eeg-analysis",
    "examples/real-eeg-multi-seizure",
    "examples/refrag-pipeline",
    "examples/robotics",
    "examples/rvf",
    "examples/rvf-desktop",
    "examples/rvf-kernel-optimized",
    "examples/scipix",
    "examples/seizure-clinical-report",
    "examples/seizure-therapeutic-sim",
    "examples/seti-boundary-discovery",
    "examples/seti-exotic-signals",
    "examples/spiking-network",
    "examples/subpolynomial-time",
    "examples/temporal-attractor-discovery",
    "examples/train-discoveries",
    "examples/verified-applications",
    "examples/void-boundary-discovery",
    "examples/weather-boundary-discovery",
    "external/ruqu/crates/ruQu",
    "external/ruqu/crates/ruqu-algorithms",
    "external/ruqu/crates/ruqu-core",
    "external/ruqu/crates/ruqu-exotic",
    "external/ruqu/crates/ruqu-wasm",
    "vendor/cognitum-one",
]
resolver = "2"

[workspace.lints.clippy]
unused_unit = "allow"

[workspace.package]
version = "2.2.3"
edition = "2021"
rust-version = "1.77"
license = "MIT"
authors = ["Ruvector Team"]
repository = "https://github.com/FlexNetOS/ruvector"
homepage = "https://ruv.io"
description = "Neuromorphic vector search engine with spiking neural networks and HNSW indexing"
keywords = ["neuromorphic", "vector-search", "hnsw", "spiking", "snn"]
categories = ["algorithms", "science"]
documentation = "https://docs.rs/ruvector"

[workspace.dependencies]
# Cognitum Seed / Cloud SDK (https://cognitum.one/developers).
# Vendored in-tree at `vendor/cognitum-one/` (v0.2.1, MIT, upstream
# `cognitum-one/sdks` @ `a9e1c073`). See `vendor/cognitum-one/VENDORED.md`
# for provenance and update procedure. Crates opt in by listing
# `cognitum-one.workspace = true` in their own `Cargo.toml`. Default features
# enable rustls + the `seed` (LAN appliance) surface; add `mdns` / `stream` /
# `blocking` features per crate as needed.
cognitum-one = { path = "vendor/cognitum-one", default-features = false, features = ["rustls", "seed"] }

# Core functionality
redb = "2.1"
memmap2 = "0.9"
hnsw_rs = "0.3"
simsimd = "5.9"
rayon = "1.10"
crossbeam = "0.8"

# DDS / robotics middleware (used by agentic-robotics-* crates)
zenoh = "1.9"
rustdds = "0.11"
cdr = "0.2"
hdrhistogram = "7.5"

# Serialization
rkyv = "0.8"
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Node.js bindings
napi = { version = "2.16", default-features = false, features = ["napi9", "async", "tokio_rt"] }
napi-derive = "2.16"

# WASM
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Worker", "MessagePort", "console"] }
getrandom = { version = "0.3", features = ["wasm_js"] }

# Async runtime
tokio = { version = "1.41", features = ["rt-multi-thread", "sync", "macros"] }
futures = "0.3"

# Error handling and utilities
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Math and numerics
nalgebra = { version = "0.33", default-features = false, features = ["std"] }
ndarray = "0.16"
rand = "0.8"
rand_distr = "0.4"

# Time and UUID
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde", "js"] }

# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }
indicatif = "0.17"
console = "0.15"

# Testing and benchmarking
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.5"
mockall = "0.13"

# Formal verification
lean-agentic = "=0.1.0"

# Performance
dashmap = "6.1"
parking_lot = "0.12"
once_cell = "1.20"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "unwind"

[profile.bench]
inherits = "release"
debug = true

[profile.dev]
opt-level = 0
debug = true

[profile.test]

# Patch hnsw_rs to use rand 0.8 instead of 0.9 for WASM compatibility
# This resolves the getrandom version conflict (0.2 vs 0.3)
[patch.crates-io]
hnsw_rs = { path = "./patches/hnsw_rs" }
