[package]
name = "agentic-robotics-benchmarks"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
agentic-robotics-core = { workspace = true }
agentic-robotics-rt = { workspace = true }
criterion = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[[bench]]
name = "message_serialization"
harness = false

[[bench]]
name = "pubsub_latency"
harness = false

[[bench]]
name = "executor_performance"
harness = false
