[package]
name = "agentic-robotics-benchmarks"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
ros3_core = { package = "agentic-robotics-core", path = "../agentic-robotics-core", version = "2.2.3" }
ros3_rt = { package = "agentic-robotics-rt", path = "../agentic-robotics-rt", version = "2.2.3" }
criterion = { version = "0.5", features = ["html_reports"] }
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
futures = { workspace = true }

[[bench]]
name = "message_serialization"
harness = false

[[bench]]
name = "pubsub_latency"
harness = false

[[bench]]
name = "executor_performance"
harness = false
