[package]
name = "ruvector-graph-transformer-node"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Self-contained graph-transformer implementation (proof-gated attention, verified training) exposed to Node.js via NAPI-RS"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.16", default-features = false, features = ["napi9", "async", "serde-json"] }
napi-derive = "2.16"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
napi-build = "2"

