[package]
name = "ruvector-hnsw-repair"
version = "2.2.3"
edition = "2021"
rust-version = "1.77"
authors = ["Ruvector Team"]
license = "MIT"
repository = "https://github.com/FlexNetOS/ruvector"
description = "Online HNSW graph repair after vector deletions — three deletion strategies with measured recall recovery"

[[bin]]
name = "benchmark"
path = "src/benchmark.rs"

[dependencies]
rand = "0.8"

[lints.rust]
dead_code = "allow"
unused_variables = "allow"
unused_imports = "allow"

[lints.clippy]
pedantic = { level = "allow", priority = -2 }
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
